@@ -59,10 +59,12 @@ public:
 	QString sPreset;
 	QString sPresetDir;
 
+	// Dial knob behavior mode.
+	int iKnobDialMode;
+
 	// Special persistent options.
 	bool bProgramsPreview;
 	bool bUseNativeDialogs;
-
 	// Run-time special non-persistent options.
 	bool bDontUseNativeDialogs;
 
